tests/ui/env-macro/env-not-string-literal.stderr
error: expected string literal
  --> $DIR/env-not-string-literal.rs:1:18
   |
LL | fn main() { env!(10, "two"); }
   |                  ^^

error: aborting due to 1 previous error

