tests/ui/env-macro/env-not-string-literal.rs
fn main() { env!(10, "two"); } //~ ERROR: expected string literal
